refactor: Rearrange the order of input for new form firt is Title then the  category

--- a/client/src/styles/pages/dashboard/NewPost.module.css
+++ b/client/src/styles/pages/dashboard/NewPost.module.css
@@ -44,7 +44,7 @@
   border-color: var(--border-color);
 }
 
-.input-texfield-item-wrapper div[class*="MuiInputBase-root"] input {
+.input-texfield-item-wrapper div[class*="MuiInputBase-root"] {
   background: hsl(var(--clr-neutral-body-bg) / 0.2);
 }
 
