style: Add style to the SinglePost page content

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -43,6 +43,8 @@
   --clr-white: hsl(0 0% 100%);
   --clr-off-white: hsl(0 0% 95%);
   --clr-off-white: hsl(0 0% 95%);
+  --clr-light-gray-400: hsl(216 12% 84% / 0.9);
+  --clr-light-gray: hsl(218 11% 65%);
   --clr-border: hsla(0 0% 100% / 0.1);
   --clr-neutral-border: 0 0% 100%;
   --clr-card-bg: hsla(240, 12%, 5%, 0.8);
@@ -96,7 +98,6 @@ main {
   --footer-height: 105px;
 
   min-height: calc(100vh - calc(var(--header-height) + var(--footer-height)));
-  padding: 0 1rem;
 }
 
 h1 {
