--- a/client/src/styles/pages/dashboard/table/EnhancTableHeader.module.css
+++ b/client/src/styles/pages/dashboard/table/EnhancTableHeader.module.css
@@ -15,6 +15,7 @@
   color: hsla(0 0% 100% / 0.2);
 }
 
-.header tr th span[class*="Mui-checked"] {
+.header tr th span[class*="Mui-checked"],
+.header tr th span[class*="MuiCheckbox-indeterminate"] {
   color: var(--clr-primary-500);
 }
