feat: Show search ClearIcon if there's a search field have value

--- a/client/src/styles/pages/dashboard/table/EnhanceTableToolbar.module.css
+++ b/client/src/styles/pages/dashboard/table/EnhanceTableToolbar.module.css
@@ -18,3 +18,10 @@
   fieldset[class*="MuiOutlinedInput-notchedOutline"] {
   border-color: hsl(var(--clr-neutral-border) / 0.2);
 }
+
+.delete-icon[class*="MuiInputAdornment-root"] {
+  display: none;
+}
+.delete-icon[class*="MuiInputAdornment-root"].show {
+  display: inline-flex;
+}
