--- a/client/src/styles/pages/dashboard/table/EnhanceTableToolbar.module.css
+++ b/client/src/styles/pages/dashboard/table/EnhanceTableToolbar.module.css
@@ -25,3 +25,78 @@
 .delete-icon[class*="MuiInputAdornment-root"].show {
   display: inline-flex;
 }
+
+.delete-modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #27272a;
+  border-radius: 4px;
+  border: 1px solid var(--clr-border);
+  padding: 4px;
+  width: min(400px, 90%);
+  display: flex;
+  flex-direction: column;
+  color: var(--clr-primary-100);
+}
+
+.delete-modal-inner-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: calc(1rem - 4px);
+  gap: 1rem;
+}
+
+.close-modal-button[class*="MuiButtonBase-root"] {
+  color: var(--clr-primary-100);
+  align-self: end;
+}
+
+.close-modal-button[class*="MuiButtonBase-root"] svg {
+  /* font-size: 1rem; */
+  color: hsl(var(--clr-neutral-border) / 0.6);
+}
+
+.delete-modal-illustrator[class*="MuiSvgIcon-root"] {
+  font-size: 4rem;
+  fill: hsl(var(--clr-neutral-border) / 0.3);
+}
+
+.delete-modal-description {
+  text-align: center;
+  font-size: var(--fs-400);
+  line-height: 1.6;
+  font-weight: normal;
+  color: hsl(var(--clr-neutral-border) / 0.6);
+}
+
+.delete-modal__button-wrapper {
+  display: flex;
+  gap: 1rem;
+  margin: 1rem 0;
+}
+
+.cancel-button[class*="MuiButtonBase-root"] {
+  background-color: #3f3f46;
+  border: 1px solid #71717a;
+  color: #f5f5f4;
+}
+.cancel-button[class*="MuiButtonBase-root"]:hover {
+  background-color: #52525b;
+  border: 1px solid #a1a1aa;
+  color: #fafafa;
+}
+
+.delete-button[class*="MuiButtonBase-root"] {
+  background-color: #dc2626;
+  border: 1px solid #f87171;
+  color: #fee2e2;
+}
+.delete-button[class*="MuiButtonBase-root"]:hover {
+  background-color: #b91c1c;
+  border: 1px solid #ef4444;
+  color: #fecaca;
+}
