--- a/client/src/styles/pages/articles/SingleArticle.module.css
+++ b/client/src/styles/pages/articles/SingleArticle.module.css
@@ -16,7 +16,7 @@
 }
 
 .header-info-wrapper {
-  margin: 1.75rem 1rem 0 1rem;
+  padding: 1.75rem 1rem 0 1rem;
   border-bottom: 1px solid hsla(215 14% 34%/ 0.2);
 }
 
@@ -98,4 +98,17 @@
 
 .views-wrapper {
   display: flex;
+}
+
+@media (min-width: 700px) {
+  .single-post {
+    padding-top: 2rem;
+  }
+  .thumbnail {
+    width: min(700px, 100%);
+    margin-inline: auto;
+    border: 1px solid var(--clr-border);
+    border-radius: 4px;
+    overflow: hidden;
+  }
 }
