--- a/client/src/styles/pages/home/FeaturedPost.module.css
+++ b/client/src/styles/pages/home/FeaturedPost.module.css
@@ -19,6 +19,6 @@
 
 .featured-post-items-wrapper {
   display: grid;
-  grid-template-columns: repeat(1, minmax(0, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(min(290px, 100%), 1fr));
   gap: 1rem;
 }
