feat: Implement "Logout"

--- a/client/src/styles/component/ui/Modals/MainNavigationModal.module.css
+++ b/client/src/styles/component/ui/Modals/MainNavigationModal.module.css
@@ -27,10 +27,26 @@
 }
 
 .button-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   border-top: 1px solid var(--border-color);
   padding: 1rem;
 }
 
-.close-button {
+.close-button,
+.logout-button {
   width: 100%;
+}
+.logout-button[type="button"][class*="button"] {
+  --bg-opacity: 1;
+  --bg-color: hsl(var(--clr-neutral-danger) / var(--bg-opacity));
+  background-color: var(--bg-color);
+  color: #fecaca;
+  display: flex;
+  gap: 6px;
+}
+.logout-button[type="button"][class*="button"]:hover {
+  --bg-opacity: 0.9;
+  color: #fee2e2;
 }
