feat: Implement Responsive Header/Main navigation

--- a/client/src/styles/component/Header.module.css
+++ b/client/src/styles/component/Header.module.css
@@ -26,9 +26,45 @@
   align-items: center;
   gap: 1rem;
 }
+.big-screen-nav-links,
+.logout-button[type="button"][class*="button"] {
+  display: none;
+}
 
 @media (min-width: 640px) {
+  .header {
+    top: 1rem;
+    border: 1px solid hwb(219 61% 31% / 0.1);
+    width: min(768px, 100%);
+    margin-inline: auto;
+    border-radius: 9999px;
+  }
+
+  .header.dashboard {
+    width: min(1368px, 100%);
+  }
   .hamburger-button[type="button"] {
     display: none;
+  }
+  .big-screen-nav-links {
+    display: flex;
+    margin-right: 0.75rem;
+  }
+
+  .logout-button[type="button"][class*="button"] {
+    background-color: hsl(var(--clr-neutral-danger));
+    color: #fecaca;
+    display: flex;
+    gap: 6px;
+    width: fit-content;
+    padding: 0.5rem 0.75rem;
+  }
+  .logout-button[type="button"][class*="button"]:hover {
+    background-color: hsl(var(--clr-neutral-danger) / 0.9);
+    color: #fee2e2;
+  }
+
+  .nav__left-icons-wrapper {
+    gap: 0.75rem;
   }
 }
