--- a/client/src/styles/component/PostForm.module.css
+++ b/client/src/styles/component/PostForm.module.css
@@ -1165,6 +1165,12 @@
     flex-direction: row;
   }
 }
+
+@media (min-width: 640px) {
+  .new-post {
+    margin-top: 2.75rem;
+  }
+}
 @media (min-width: 600px) {
   .categories-and-tags-wrapper,
   .status-visibility-wrapper,
