feat: Implement "Circular Progress bar" it's in loading state

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -151,3 +151,9 @@ video {
   width: min(1300px, 100%);
   margin-inline: auto;
 }
+
+.loading-wrapper {
+  display: grid;
+  place-items: center;
+  height: calc(100dvh - (105px + 57px));
+}
