--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -48,6 +48,7 @@
   --clr-card-bg: hsla(240, 12%, 5%, 0.8);
   --clr-body-bg: hsl(225 10% 8%);
   --clr-icon: hsl(216 12% 84%);
+  --clr-subtitle: rgba(209, 213, 219, 0.9);
 
   --clr-neutral-body-bg: 225 10% 8%;
   --clr-neutral-border: 0 0% 100%;
@@ -138,6 +139,10 @@ video {
   vertical-align: middle;
 }
 
+.read-more-btn {
+  letter-spacing: 0.2px;
+}
+
 .card:is(:hover) .read-more-btn svg,
 .card:is(:focus) .read-more-btn svg {
   transition: var(--transition);
@@ -164,4 +169,6 @@ video {
   --clr-body-bg: hsl(0, 0%, 100%);
   --clr-icon: hsl(215 14% 34%);
   --clr-border: rgb(229 231 235);
+  --clr-white: hsl(225 10% 8%);
+  --clr-subtitle: rgb(55 65 81);
 }
